# minbin

./: .gitignore  Cargo.toml  License  README.md  sonar-project.properties
.github/workflows/: build.yml  coverage.yml
benches/: containers.rs  helpers.rs  main.rs  primitives.rs  structs.rs  tuples.rs
examples/: macro_enum.rs  macro_struct.rs  manual_enum.rs  manual_struct.rs
src/: bytes.rs  containers.rs  cursors.rs  error.rs  lib.rs  macros.rs  main.rs  primitives.rs  test.rs  tuples.rs
src/alloc/: api.rs  mod.rs  owned.rs
src/core/: api.rs  containers.rs  error.rs  macros.rs  mod.rs  primitives.rs  reader.rs  to_from_bytes.rs  tuples.rs  writer.rs
src/macros/: minbin_enum.rs  minbin_struct.rs  mod.rs
tests/: containers.rs  cursor.rs  helpers.rs  macros.rs  primitives.rs  structs.rs  tuples.rs
tests/alloc/: mod.rs  structs.rs
tests/core/: containers.rs  mod.rs  primitives.rs  reader.rs  structs.rs  tuples.rs  writer.rs
