[package]
name = "minbin"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A tiny (~500 LOC), zero-dependency, safe, no-std binary serializer prioritizing predictability and auditability."
repository = "https://github.com/humacss/minbin"
documentation = "https://docs.rs/minbin"
readme = "README.md"
categories = ["encoding", "no-std", "network-programming"]
keywords = ["serialization", "no-std", "binary", "encoding", "manual"]
authors = ["humacss"]

[dependencies]
# No dependencies

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[features]
default = ["alloc"]
alloc = []

[[bench]]
name = "main"
harness = false

[package.metadata.docs.rs]
all-features = true
